# PyTorch-Pruning

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: pre-commit.yml
benchmarks/: README.md  baseline.py  data.py  models.py
benchmarks/llama/: README.md  baseline.py
benchmarks/vision/: README.md  RESULT.md  baseline.py  models.py
experiments/: README.md  depgraph_pruning.py  depgraph_vit_pruning.py  pytorch_pruning.py
experiments/llama/: sparsegpt_pruning.py  wanda_torchao.py
experiments/vision/: depgraph_pruning.py  depgraph_vit_pruning.py  pytorch_pruning.py
