[project]
name = "pytorch-pruning"
version = "0.1.0"
description = "For pruning techniques using PyTorch"
authors = ["namgyu youn"]
readme = "README.md"
keywords = ["deep-learning", "neural-network", "pruning"]
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.6.0",
    "numpy>=2.2.6",
    "pandas>=2.3.0",
    "ruff>=0.11.12",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "transformers>=4.52.4",
]
