[project]
name = "pytorch-pruning"
version = "0.1.0"
description = "Benchmarks variable pruning techniques for PyTorch based models"
readme = "README.md"
keywords = ["deep-learning", "neural-network", "transformers", "pruning"]
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.6.0",
    "numpy>=2.2.6",
    "pandas>=2.3.0",
    "ruff>=0.11.12",
    "timm>=1.0.16",
    "torch>=2.7.1",
    "torch-pruning>=1.5.3",
    "torchao>=0.11.0",
    "torchvision>=0.22.1",
    "transformers>=4.52.4",
]
